Change DES encryption to AES; server sending its own certificate