@@ -24,11 +24,45 @@ public class FTPserver_AP_CP1 {
         Socket clientSocket = serverSocket.accept();
         System.out.println("client connected");  
 
-        InputStream inputStream_from_client = clientSocket.getInputStream();   
+        InputStream inputStream_from_client = clientSocket.getInputStream();  
+        //DataInputStream dis = new DataInputStream(clientSocket.getInputStream()); 
+        //InputStreamReader isr = new InputStreamReader(dis);
         InputStreamReader isr = new InputStreamReader(inputStream_from_client);
         BufferedReader in = new BufferedReader(isr);
         OutputStream outputStream_to_client = clientSocket.getOutputStream();         
         PrintWriter out = new PrintWriter(outputStream_to_client, true);
+
+        // // server send its own certificate to client
+        // //send file (move in rest of code)
+        // String fileName = "C:\\Users\\zhexian\\Documents\\GitHub\\Encrypted_FTP_NSproject\\Signed Certificate - 1001214.crt";
+        // File file_to_client = new File(fileName);
+        // String data = "";
+        // String line;
+        // BufferedReader bufferedReader = new BufferedReader(new FileReader(fileName));
+        // while ((line = bufferedReader.readLine()) != null) {
+        //     data = data + "\n" + line;
+        // }
+
+        // FileInputStream fileInputStream = null;
+        // byte[] input_file_as_byte_array = new byte[(int) file_to_client.length()];
+        // int file_byte_length= input_file_as_byte_array.length;
+        // System.out.println("server public key byte array length= "+ input_file_as_byte_array.length);
+        // try {
+        //     //convert file into byte array
+        //     fileInputStream = new FileInputStream(file_to_client);
+        //     fileInputStream.read(input_file_as_byte_array);
+        //     fileInputStream.close();
+        // } catch (Exception e) {
+        //     e.printStackTrace();
+        // }
+
+        // //convert byte array file (server certificate) to base64 format
+        // String input_file_as_byte_array_string = DatatypeConverter.printBase64Binary(input_file_as_byte_array);
+
+        // //send file to client
+        // out.write(input_file_as_byte_array_string+"\n");
+        // out.flush();
+        // System.out.println("server certificate sent");    
 
         // receive plain nonce broadcasted by client
         String nonce = in.readLine();
@@ -68,13 +102,14 @@ public class FTPserver_AP_CP1 {
         out.flush();
 
         // convert String received from client (encrypted file) to byte[]
-        byte[] fileReceived_byte = DatatypeConverter.parseBase64Binary(fileReceived);
+        //byte[] fileReceived_byte = DatatypeConverter.parseBase64Binary(fileReceived);
+        byte[] fileReceived_byte = Base64.decodeBase64(fileReceived);
 
         // decrypt the encrypted file in byte[] format useing private key
         Cipher rsaCipher_decrypt = Cipher.getInstance("RSA/ECB/PKCS1Padding");
         rsaCipher_decrypt.init(Cipher.DECRYPT_MODE, server_privateKey);
 
-        //TODO: break up bytes into 128 per block to do final(max)
+        //break up bytes into 128 per block to do final(max)
         int file_byte_length= fileReceived_byte.length;
         int number_of_blocks= (int) Math.ceil(file_byte_length/128.0);
         //e.g. 350: get 3: index from 0 to 3
@@ -102,15 +137,19 @@ public class FTPserver_AP_CP1 {
             joining_decrypted_blocks.write(block, 0, block.length);
         }
         byte[] decryptedBytes= joining_decrypted_blocks.toByteArray();
-        //TODO: END OF CHANGE
-        //byte[] decryptedBytes = rsaCipher_decrypt.doFinal(fileReceived_byte);
-        //----------ask TA: arrayOutOfBoundException here-------------
+        //String decryptedFile_string = DatatypeConverter.printBase64Binary(decryptedBytes);
 
         // create a new file to store ht file received from client
         File file = new File("FTP1.txt");
         FileWriter writer = new FileWriter(file);
         writer.write(new String(decryptedBytes));
         writer.close();
+
+        // File file = new File("FTP1.txt");
+        // FileOutputStream fos = new FileOutputStream(file);
+        // BufferedWriter out2 = new BufferedWriter(new OutputStreamWriter(fos));
+        // out2.write(decryptedFile_string);
+        // out2.close();
 
         // end time for file transfer
         long endTime = System.nanoTime();
